ops/kubernetes/k8s-yaml/network/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80         # Service port (used by Ingress)
      targetPort: 80   # Pod containerPort
  type: ClusterIP
